# arbf

./: CMakeLists.txt
arbf-image-cuda/arbf-image-cuda/: DEBUG.centers.ppm  DEBUG.centers.txt  DEBUG.hxy.txt  DEBUG.pixel_tag.txt  DEBUG.transformed_eigenvalue.txt  DEBUG.vertex_faces_1ring.txt  good_DEBUG.pixel_tag.txt
arbf-image-cuda/arbf-image-cuda.xcodeproj/: project.pbxproj
arbf-image-sr/arbf-image-sr/: DEBUG.centers.ppm  DEBUG.centers.txt  ax.ppm  axy.ppm  axybx.ppm  axybxy.ppm  axybxycxy.ppm  ay.ppm  no_gradient.ppm  rbf.ppm  rbf_axybxycxy.ppm
arbf-image-sr/arbf-image-sr.xcodeproj/: project.pbxproj
arbf-image/arbf-image/: DEBUG.centers.ppm  DEBUG.centers.txt  DEBUG.face_faces_1ring.txt  DEBUG.face_faces_2ring.txt  DEBUG.neigh_vertex_1ring.txt  DEBUG.neigh_vertex_2ring.txt  DEBUG.pixel_tag.txt  DEBUG.rho.txt  DEBUG.transformed_eigenvalue.txt  DEBUG.vertex_faces_2ring.txt  out.brain-inhomoneity-7T_MR.ppm  out.heart-ct.ppm  out.image-motion-YE_AI_YU.MR.BREAST_GENERAL.ppm  out.lena_3.1ring.ppm  out.lena_3.2ring.ppm  out.loop.over.triangles.1ring.IMQ.ppm  out.loop.over.triangles.1ring.TPS.ppm  out.loop.over.triangles.1ring.ppm  out.loop.over.triangles.1ring.weighted.ppm  out.loop.over.triangles.2ring.ppm  out.loop.over.triangles.2ring.weighted.ppm  out.loop.over.triangles.isorbf.1ring.ppm  out.loop.over.triangles.isorbf.2ring.ppm  out.loop.over.vertices.1ring.ppm  out.loop.over.vertices.2ring.ppm  out.simple.1ring.ppm  out.simple.2ring.ppm  out.simple_dense.1ring.ppm  (+1 more)
arbf-image/arbf-image.xcodeproj/: project.pbxproj
arbf.xcworkspace/: contents.xcworkspacedata
(+124 files in other folders)
